Moves assets to relative folder

--- a/moped-editor/src/styles/views/_page-layouts.scss
+++ b/moped-editor/src/styles/views/_page-layouts.scss
@@ -4,7 +4,7 @@
   .header-bg {
     height: 200px;
     background: $primary;
-    background-image: url("/assets/images/home-bg-black.png");
+    background-image: url("./assets/images/home-bg-black.png");
     background-size: contain;
   }
 
