--- a/moped-editor/src/styles/views/_landing.scss
+++ b/moped-editor/src/styles/views/_landing.scss
@@ -37,13 +37,13 @@
     background: rgba(0, 0, 0, 0.024);
   }
   // .bg-img-indigo {
-  //   background: url("./assets/images/home-bg.jpg") center center/cover no-repeat !important;
+  //   background: url("/assets/images/home-bg.jpg") center center/cover no-repeat !important;
   // }
   // .bg-img-indigo {
-  //   background: url("./assets/images/home-bg.jpg") center center/cover no-repeat !important;
+  //   background: url("/assets/images/home-bg.jpg") center center/cover no-repeat !important;
   // }
   // .bg-img-black {
-  //   background: url("./assets/images/home-bg-black.png") center center/cover
+  //   background: url("/assets/images/home-bg-black.png") center center/cover
   //     no-repeat !important;
   // }
 
@@ -605,7 +605,7 @@
   }
 
   .service7__card {
-    background-image: url("./assets/images/illustrations/1.svg");
+    background-image: url("/assets/images/illustrations/1.svg");
     background-size: 250px;
     background-repeat: no-repeat;
     background-position: center right;
@@ -668,7 +668,7 @@
 // call to acitons
 .section-cta1 {
   color: #fff;
-  background: url("./assets/images/home-bg.jpg") center center/cover no-repeat;
+  background: url("/assets/images/home-bg.jpg") center center/cover no-repeat;
   h1,
   h2,
   h3,
