--- a/moped-editor/src/views/projects/newProjectView/NewProjectMap.css
+++ b/moped-editor/src/views/projects/newProjectView/NewProjectMap.css
@@ -1,3 +1,34 @@
 .mapboxgl-ctrl-geocoder {
-    width: 100%;
+  width: 100%;
+}
+
+.MuiSpeedDial-fab {
+  background: lightgray !important;
+  border-radius: 4px !important;
+  background-size: 100% 100% !important;
+  width: 5rem !important;
+  height: 5rem !important;
+}
+
+.MuiFab-sizeSmall {
+  background: lightgray !important;
+  border-radius: 4px !important;
+  background-size: 100% 100% !important;
+  width: 5rem !important;
+  height: 5rem !important;
+}
+
+.MuiFab-sizeSmall:nth-of-type(1) {
+  background-image: url(/moped/static/images/mapStreets.jpg) !important;
+  color: black;
+}
+
+.MuiFab-sizeSmall:nth-of-type(2) {
+  background-image: url(/moped/static/images/mapAerial.jpg) !important;
+  color: white;
+}
+
+.MuiFab-label {
+  font-size: 1rem !important;
+  font-weight: bold !important;
 }
