--- a/moped-editor/src/views/projects/newProjectView/NewProjectMap.css
+++ b/moped-editor/src/views/projects/newProjectView/NewProjectMap.css
@@ -29,6 +29,20 @@
 }
 
 .MuiFab-label {
-  font-size: .8rem !important;
+  font-size: 0.8rem !important;
   font-weight: bold !important;
+}
+
+@media screen and (min-width: 640px) {
+  .mapboxgl-ctrl-geocoder--icon-search {
+    top: 0.9rem;
+  }
+
+  .mapboxgl-ctrl-geocoder--input {
+    height: 3rem;
+  }
+
+  .mapboxgl-ctrl-geocoder--icon-close {
+    margin-top: 8px;
+  }
 }
